<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reminderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_title"
                android:text="@={viewModel.reminderTitle}"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"/>

            <EditText
                android:id="@+id/reminderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/reminder_desc"
                android:lines="10"
                android:text="@={viewModel.reminderDescription}"
                android:layout_below="@+id/reminderTitle"
                android:layout_alignParentStart="true"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"/>

            <TextView
                android:id="@+id/selectLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reminderDescription"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/selectedLocation"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_location"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/reminder_location"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/selectedLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminderDescription"
                android:layout_alignBaseline="@id/selectLocation"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@{viewModel.reminderSelectedLocationStr}"
                android:textColor="@color/black"
                tools:text="Location" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
            android:layout_gravity="bottom|end"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </layout>
