<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login">Login</string>
    <string name="logged_user">Let\'s travel</string>
    <string name="welcome_logged_user">Welcome %1$s, to the location reminder app</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="change_style">Change Map Style</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app.</string>
    <string name="permission_denied_explanation">
        Grant the location permission to improve the experience with the app. </string>
    <string name="background_permission_denied_explanation">
        Grant the location permission to activate the location reminder. </string>
    <string name="settings">Settings</string>
    <string name="select_location_button">Select Location</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="geofence_added">Geofence location added</string>
    <string name="log_out_delete_data">Delete data</string>
    <string name="delete_all_data">Are you sure to log out? All the data will be deleted</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">
        Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">
        Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.
    </string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="logging_error">Logging Error</string>
    <string name="logging_out_error">Error logging out</string>
    <string name="location_not_selected">Please select a location</string>
    <string name="no">No</string>
    <string name="background_location_permission_title">Background Location permission needed</string>
    <string name="background_location_permission_message">
        In order to notify you when you have reached your reminder, the app needs access
        to the  background location service.
    </string>
    <string name="yes">Yes</string>
    <string name="test_exception">Test Exception</string>
    <string name="arrived_at_reminder">You have reached your reminder location</string>
    <string name="ok">Ok</string>
</resources>
