<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mapConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--TODO: Add the map fragment for the user to select the location-->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pickLocation"
            style="@style/Button.Logging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/select_location_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/googleMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:context=".locationreminders.savereminder.selectreminderlocation.SelectLocationFragment"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
